# rag-chatbot-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/: auth.py  chat.py  documents.py  health.py  sessions.py
app/core/: config.py  crypto.py  logger.py  security.py  utils.py
app/db/: models.py  session.py
app/db/migrations/versions/: xxxx_add_timestamps_to_chat_states.py
app/db/repositories/: base.py  chat.py  documents.py  users.py
app/models/: chat_state.py  documents.py  users.py
app/services/: chat_checkpointer.py  chat_flow.py  document_processor.py  documents.py  embeddings.py  llm.py  model_factory.py  vector_store.py
app/static/: index.html
app/tasks/: document_tasks.py
